# backend

./: .env.example  .gitignore  AGENTS.md  CHANGES_INDEX.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  FIX_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SETUP.md  docker-compose.dev.yml  docker-compose.override.example.yml  docker-compose.yml  init-dev.sh  pyproject.toml  requirements.txt  test.txt  verify-setup.sh
app/: __init__.py  main.py  requirements.txt
app/agents/: __init__.py  customer_service.py  social_media.py
app/api/v1/: agents.py  auth.py  chatbot.py  endpoints.py  frontend.py
app/core/: config.py  logging.py  metrics.py  middleware.py
app/core/langgraph/: graph.py  tools.py
app/core/prompts/: system.md
app/models/: __init__.py  collection.py  cs.py  document.py  social.py  user.py
app/routers/: telegram.py
app/schemas/: __init__.py  auth.py  chat.py  cs.py  document.py  social.py
app/services/: case_history.py  database.py  llm.py  vector_store.py  web_scraper.py
app/utils/: chunking.py  file_parser.py  text.py
evals/: conftest.py  test_cs_agent.py  test_rag.py  test_social_agent.py
grafana/: datasources.yml
grafana/dashboards/: integrateai.json
migrations/: env.py
migrations/versions/: 748df60fac2d_add_training_data_to_company.py
prometheus/: prometheus.yml
scripts/: init_db.sql
