[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "integrateai-blueprint"
version = "0.1.0"
description = "IntegrateAI Blueprint — Production-grade RAG + Agentic AI framework for B2B SME integrations"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "IntegrateAI Team" },
]

dependencies = [
    # ── Web Framework ──────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # ── LLM Orchestration ─────────────────────────────────────────────────────
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langgraph>=0.2.0",
    # ── RAG / Indexing ─────────────────────────────────────────────────────────
    "llama-index>=0.11.0",
    "llama-index-core>=0.11.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-vector-stores-postgres>=0.2.0",
    "llama-index-postprocessor-cohere-rerank>=0.2.0",
    # ── Database ──────────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.9",
    # ── Auth & Security ───────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    # ── Config & Validation ───────────────────────────────────────────────────
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    # ── Observability ─────────────────────────────────────────────────────────
    "prometheus-fastapi-instrumentator>=7.0.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    # ── HTTP / Async ──────────────────────────────────────────────────────────
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "tenacity>=9.0.0",
    # ── Groq (fast inference) ─────────────────────────────────────────────────
    "groq>=0.11.0",
    "langchain-groq>=0.2.0",
    # ── Cohere (reranking) ────────────────────────────────────────────────────
    "cohere>=5.11.0",
    "langchain-ollama>=1.0.1",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "llama-index-llms-ollama>=0.10.1",
    "llama-index-embeddings-ollama>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "faker>=28.0.0",
    "deepeval>=1.4.0",   # LLM eval framework (hallucination, faithfulness, etc.)
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ── Ruff (linter + formatter) ──────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "B008"]

# ── MyPy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["evals"]
filterwarnings = ["ignore::DeprecationWarning"]
